fixup pixelRatio in scatter3d and surface3d

--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "gl-mat4": "^1.2.0",
     "gl-mesh3d": "^2.0.7",
     "gl-plot2d": "^1.4.2",
-    "gl-plot3d": "git://github.com/gl-vis/gl-plot3d.git#c0657afe32fe77ac0f648461faacf16c87a3a716",
+    "gl-plot3d": "git://github.com/gl-vis/gl-plot3d.git#17e3d30c5d63aaa5de7c7e81dd3ef47ba0904e80",
     "gl-pointcloud2d": "^1.0.2",
-    "gl-scatter3d": "^1.1.6",
+    "gl-scatter3d": "git://github.com/gl-vis/gl-scatter3d.git#d9e75ea7e51a4c0dc5f9d0f17d03e031564e372b",
     "gl-select-box": "^1.0.3",
     "gl-spikes2d": "^1.0.2",
     "gl-streamtube3d": "^1.1.2",
-    "gl-surface3d": "^1.4.1",
+    "gl-surface3d": "git://github.com/gl-vis/gl-surface3d.git#96e61eebac18e9b525f7f3e6b714291b5d1b4bad",
     "gl-text": "^1.1.6",
     "glslify": "^7.0.0",
     "has-hover": "^1.0.1",
